<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
<<<<<<< HEAD
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menuSettings"
        android:icon="@mipmap/ic_settings"
        android:showAsAction="always"
        android:title="@string/str_settings"></item>
    <item
        android:id="@+id/menuAbout"
        android:showAsAction="ifRoom"
        android:title="@string/str_about"></item>
    <item
        android:id="@+id/menuExit"
        android:showAsAction="ifRoom"
        android:title="@string/str_exit"></item>
=======
    xmlns:app="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/menuSettings"
        android:icon="@mipmap/ic_setting"
        android:title="@string/str_settings"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/menuAbout"
        android:title="@string/str_about"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/menuExit"
        android:title="@string/str_exit"
        app:showAsAction="ifRoom"></item>
>>>>>>> 197f11fcead1a97864ebc9fd0a075e35c7c0a74f
</menu>