<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ojvar.patientmonitoring.LoginActivity">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_login"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconImageView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_username"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/str_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/str_confirm"
        android:layout_alignBaseline="@+id/exitButton"
        android:layout_alignBottom="@+id/exitButton"
        android:layout_toRightOf="@+id/exitButton"
        android:layout_toEndOf="@+id/exitButton"/>
=======
        android:layout_alignBaseline="@+id/exitButton"
        android:layout_alignBottom="@+id/exitButton"
        android:layout_toEndOf="@+id/exitButton"
        android:layout_toRightOf="@+id/exitButton"
        android:text="@string/str_confirm"/>
>>>>>>> 197f11fcead1a97864ebc9fd0a075e35c7c0a74f

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginTop="14dp"
        android:text="@string/str_exit"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"/>

=======
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="14dp"
        android:text="@string/str_exit"/>
>>>>>>> 197f11fcead1a97864ebc9fd0a075e35c7c0a74f


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:layout_above="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
=======
        android:layout_above="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp"/>
>>>>>>> 197f11fcead1a97864ebc9fd0a075e35c7c0a74f

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:gravity="center"
        android:text="@string/str_version"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
=======
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/str_version"
        android:textSize="12sp"/>
>>>>>>> 197f11fcead1a97864ebc9fd0a075e35c7c0a74f
</RelativeLayout>
